css: Fix invisible nav alt text in dark mode
When inverting images in dark mode, set text color to black so the
alt text is inverted to white and is still visible.

--- a/links/main.css
+++ b/links/main.css
@@ -119,7 +119,7 @@ ul.nobull li {list-style-type: none}
 
 @media (prefers-color-scheme: dark) {
 	body {background: #000; color: white}
-	nav a img.text, img.invert, footer a.logo { filter: invert(1)}
+	nav a img.text, img.invert, footer a.logo { color:#000; filter: invert(1)}
 	body a { color: white;}
 	main > pre { background: white; color:#000}
 	main > code { background:white; color:#000}
